--- a/software/development.tex
+++ b/software/development.tex
@@ -17,10 +17,10 @@ The first area of note in this graph is that the value of $f(t)$ quickly starts 
     \caption{Sigmoid Functions \label{fig:sigmoid-options}}
 \end{figure}
 
-For the remaining range, between 5 and -5, the sigmoid function does not tend to any fixed value, so a different approximation must be used. Fortunately, the sigmoid's ``S''-like shape lends itself to being easily split into a series of smaller lines, as shown in figure \ref{fig:sigmoid-soft}. This provides a suitable level of accuracy\todo{Qualify that claim} with far lower computing overhead as each line can be defined using only a linear equation. However, as beneficial as the approximation in figure \ref{fig:sigmoid-soft} is, it is possible to approximate this further: using a single linear equation. This is shown in this section's final figure: \ref{fig:sigmoid-hard}. When run on the training dataset, which under non-constrained conditions achieves 94.5\% accuracy, this approximation only yields an observed drop of 3\%. This margin of error is acceptable as it can be dealt with by the added heuristics\todo{Qualify that based on Heuristics section when written}.
+For the remaining range, between 5 and -5, the sigmoid function does not tend to any fixed value, so a different approximation must be used. Fortunately, the sigmoid's ``S''-like shape lends itself to being easily split into a series of smaller lines, as shown in figure \ref{fig:sigmoid-soft}. This provides a suitable level of accuracy\todo{Qualify that claim} with far lower computing overhead as each line can be defined using only a linear equation. However, as beneficial as the approximation in figure \ref{fig:sigmoid-soft} is, it is possible to approximate this further: using a single linear equation. This is shown in this section's final figure: \ref{fig:sigmoid-hard}. When run on the training dataset, which under non-constrained conditions achieves 94.5\% accuracy, this approximation only yields an observed drop of 3\%. This margin of error is acceptable as it can be dealt with by the added heuristics, as discussed in section \ref{sec:heuristics-alternative} above.
 
 \subsection{Floating point \label{sec:floating-point}}
-The lack of \todo{``The lack of'' - bit casual?} floating point support in the proposed device created a large challenge, as the neural network is entirely based upon a series of non-integer input weights, and the ability for each node to produce non integer output values. In order to get around this problem, the team opted for a fixed-point implementation\todo{Why? Talk about enormous overhead of floating point lib}: the weights of each node are multiplied by a scale factor and the resulting integer part is taken as the value.
+The lack of floating point support in the proposed device created a large challenge, as the neural network is entirely based upon a series of non-integer input weights, and the ability for each node to produce non integer output values. In order to get around this problem, the team opted for a fixed-point implementation\todo{Overhead of floating point lib}: the weights of each node are multiplied by a scale factor and the resulting integer part is taken as the value.
 
 This form is convenient as it makes the multiplication and addition of such scaled values straightforward: for addition of values using the same scale factor, it is sufficient to simply add the integers as though they were normal. The equation below illustrates this:
 
@@ -59,7 +59,7 @@ To decide the bit scale factor, $B$, for the exercise detection algorithm, it is
 (x*2^B)(y*2^B)=(x*y)*(2^B)^2=(x*y)*2^{2B}
 \end{equation}
 
-As such, the value of $B$ has to be high enough such that precision is not lost unnecessarily, but low enough such that $|x*2^B|<2^{16}$. To solve this, the highest possible floating point value must be known; in the case of the algorithm, this is the base value of the first node in the middle layer: -10.6 (3s.f.)\todo{Does this seem a bit sudden? Maybe explain this came from Dan's training above?}, using this in the rearranged equation, \ref{eq:bits:number-calc}, gives a bit shift of 12.
+As such, the value of $B$ has to be high enough such that precision is not lost unnecessarily, but low enough such that $|x*2^B|<2^{16}$. To solve this, the highest possible floating point value must be known; in the case of the algorithm, this is the base value of the first node in the middle layer: -10.6 (3s.f.); this was obtained from the training, as discussed in section \ref{ml}. Using this value in the rearranged equation, \ref{eq:bits:number-calc}, gives a bit shift of 12.
 
 \begin{equation}
 \label{eq:bits:number-calc}
