Added 2 references for the moment

--- a/ECS.bib
+++ b/ECS.bib
@@ -254,3 +254,32 @@ Raw sensor values explained
   journal={Circuits, Devices and Systems, IEE Proceedings},
   doi={10.1049/ip-cds:20030607}
 }
+
+@article{cortexm0onnexys4,
+  title={Cortex-M0 Implementation on a Xilinx FPGA,
+  author={Pedro Ignacio Martos, Fabricio Baglivo},
+  year={2011},
+  month={Feb},
+  publisher={Facultad de Ingenieria - UBA},
+  journal={Circuits, Devices and Systems, IEE Proceedings},
+  doi={10.1049/ip-cds:20030607}
+}
+Paper on implementing Cortex-M0 on Nexys2
+@MISC{cortexm0onnexys2,
+	author = {{Pedro Ignacio Martos, Fabricio Baglivo}},
+	title = {{Cortex-M0 Implementation on a Xilinx FPGA}},
+	year={2011},
+	publisher={Facultad de Ingenieria, Buenos Aires, Argentina},
+	url = {http://web.fi.uba.ar/~pmartos/publicaciones/SPL2011_Cortex-M0ImplementationOnAXilinxFPGA.pdf}
+}
+Cortex M0 traffic light on FPGA
+@article{traffic_light,
+  title={Advanced real Traffic Light Controller system design using Cortex-M0 ip on FPGA},
+  author={Basterretxea, K. and Tarela, J.M. and del Campo, I.},
+  pages={1023 - 1026},
+  year={2014},
+  month={May},
+  publisher={IEEE},
+  journal={Advanced Communication Control and Computing Technologies (ICACCCT), 2014 International Conference on},
+  doi={10.1109/ICACCCT.2014.7019251}
+}
