--- a/hardware/research.tex
+++ b/hardware/research.tex
@@ -1,7 +1,7 @@
 \namedsection{Component Research}{Pasat}
 This section discusses the extensive analysis our team took in order to choose the most optimum and efficient components available on the market. The first step took before choosing suitable components for our design was the research on what sensors could be useful in detecting the type of movements described earlier in this project. The initial sensors our team agreed on were accelerometers, gyroscopes and altimeters, taking into consideration the possibility that it would detect if the user is aboard an aircraft or not.
 
-The main criteria on which we asserted the best component our design would need were: the working voltage, the current consumption, mounting type and if it was a multi-sensor component. In table \ref{table: 1}, our top five selected components for this project can be seen. Each have advantages and disadvantages over the others, but only one of them can be used. Even i some of the sensors have a lower supply voltage and both sensors present, the fact that they are surface mount complicates the project too much, so the mounting type became the main selecting criteria. Only two of the proposed components have this type of mounting, but one of them does not contain both sensors.
+The main criteria on which we asserted the best component our design would need were: the working voltage, the current consumption, mounting type and if it was a multi-sensor component. In table \ref{table: componentsx}, our top five selected components for this project can be seen. Each have advantages and disadvantages over the others, but only one of them can be used. Even i some of the sensors have a lower supply voltage and both sensors present, the fact that they are surface mount complicates the project too much, so the mounting type became the main selecting criteria. Only two of the proposed components have this type of mounting, but one of them does not contain both sensors.
 \begin{figure}
 \centering
 \includegraphics[scale=0.4]{figures/Xadow_IMU_6DOF.PNG}
@@ -11,7 +11,7 @@ The main criteria on which we asserted the best component our design would need 
 \begin{table}[h]
 	\centering
 	\caption{Sensor options}
-	\label{table: 1}
+	\label{table: componentsx}
 	\begin{tabular}{llllll}
 		\hline
 		$Name$ & $Voltagee$ & $Current(Acc+Gyro)$ & $Mounting$ & $Acc/Gyro$ \\
