--- a/ECS.bib
+++ b/ECS.bib
@@ -283,3 +283,26 @@ Cortex M0 traffic light on FPGA
   journal={Advanced Communication Control and Computing Technologies (ICACCCT), 2014 International Conference on},
   doi={10.1109/ICACCCT.2014.7019251}
 }
+Old guide to implementing Cortex M0 on Nexys2
+@MISC{implementationcortexm0onnexys2,
+	author = {{Pedro Ignacio Martos, Fabricio Baglivo}},
+	title = {{Application Note:  Cortex™-M0 Implementation in the Nexys2 FPGA Board – A Step by Step Guide}},
+	year={2011},
+	publisher={Buenos Aires University – School of Engineering },
+	url = {http://web.fi.uba.ar/~pmartos/publicaciones/ApplicationNoteCortexM0.pdf}
+}
+
+AMBA 3 AHB-Lite Protocol Specification
+@MISC{ahblite,
+	author = {ARM},
+	url = {http://infocenter.arm.com/help/index.jsp?topic=/com.arm.doc.ihi0033a/index.html},
+	title = {AMBA 3 AHB-Lite Protocol Specification}
+}
+ARM DesignStart Notes
+@MISC{armdesignstart,
+	author = {ARM},
+	year={2014},
+    month={May},
+    publisher={ARM},
+	title = {ARM® Cortex™-M0 DesignStart™}
+}
