Fixed bib syntax error

--- a/ECS.bib
+++ b/ECS.bib
@@ -256,7 +256,7 @@ Raw sensor values explained
 }
 
 @article{cortexm0onnexys4,
-  title={Cortex-M0 Implementation on a Xilinx FPGA,
+  title={Cortex-M0 Implementation on a Xilinx FPGA},
   author={Pedro Ignacio Martos, Fabricio Baglivo},
   year={2011},
   month={Feb},
@@ -264,14 +264,16 @@ Raw sensor values explained
   journal={Circuits, Devices and Systems, IEE Proceedings},
   doi={10.1049/ip-cds:20030607}
 }
+
 Paper on implementing Cortex-M0 on Nexys2
 @MISC{cortexm0onnexys2,
-	author = {{Pedro Ignacio Martos, Fabricio Baglivo}},
-	title = {{Cortex-M0 Implementation on a Xilinx FPGA}},
+	author={Pedro Ignacio Martos, Fabricio Baglivo},
+	title={Cortex-M0 Implementation on a Xilinx FPGA},
 	year={2011},
 	publisher={Facultad de Ingenieria, Buenos Aires, Argentina},
-	url = {http://web.fi.uba.ar/~pmartos/publicaciones/SPL2011_Cortex-M0ImplementationOnAXilinxFPGA.pdf}
+	url={http://web.fi.uba.ar/~pmartos/publicaciones/SPL2011_Cortex-M0ImplementationOnAXilinxFPGA.pdf}
 }
+
 Cortex M0 traffic light on FPGA
 @article{traffic_light,
   title={Advanced real Traffic Light Controller system design using Cortex-M0 ip on FPGA},
