--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -19,7 +19,7 @@ The particular algorithm that is to be developed is a way to identify and monito
 
 Figure \ref{fig:exercises} shows some of the in-ﬂight exercises which can be performed. We have looked into a few of them including the revolver, the ballerina and the shrug. These involve lifting both feet oﬀ the ﬂoor and rotating them in circles in clockwise and anticlockwise directions, pointing the feet up and down and rolling the shoulders backwards and forwards. These are all designed to help keep the circulation going in the limbs. However, a speciﬁc focus was made to the revolver exercise for the purpose of prototyping a system.
 
-Possible uses of the algorithm would be to incorporate it into a device which could be given to passengers to strap to their legs. It would then monitor how much exercise each person was doing. This could help inform the passengers whether or not they are doing enough exercise to stay risk free. The device itself could make use of energy eﬃcient technologies (for example the Cortex-M0+) so that its battery could easily last the entire duration of a long-haul ﬂight.
+Possible uses of the algorithm would be to incorporate it into a device which could be given to passengers to strap to their legs. It would then monitor how much exercise each person was doing. This could help inform the passengers whether or not they are doing enough exercise to stay risk free. The device itself could make use of energy effcient technologies (for example the Cortex-M0+) so that its battery could easily last the entire duration of a long-haul fight.
 
 \namedsection{Project Requirements }{Finch \& Shepherd}
 
