Added suggestion about mBed Intro title

--- a/hardware/mbed.tex
+++ b/hardware/mbed.tex
@@ -3,7 +3,7 @@
 \note{Go through all tables and add references where required}
 \note{Add a plan?}
 
-\subsection{Introduction}
+\subsection{Introduction} \todo{Remove Title?}
 
 mBed is a platform which implements ARM 32-bit processors within micro-controllers which is primarily developed by ARM. They are of the DIP form factor with 40 pins. It features an online SDK allowing for the development of projects online. It permits code to be written online as well as compiled into a binary compatible with the board being used. This binary can then be downloaded removing the pre-requisite of having the ARM toolchain available locally. The manner of uploading to the mBed is relatively straight forward with the presence of the mBed interface. \cite{mbed_website}\todo{Try expanding on this section}
 
