Fixed risks session

--- a/appendices/risks.tex
+++ b/appendices/risks.tex
@@ -14,7 +14,7 @@ planned mitigation was appropriate so there were no significant issues caused by
   Developer Health &
   Ongoing health issues with one team member may disrupt their ability to work &
   0.8 & 0.6 & 0.48 &
-  . \\
+  Ensure that two team members are working on each core task; in that way developer illness will not delay progress of the project. \\
   \hline
 
   Ethical Approval Delays &
