Added Cortex Section label

--- a/hardware/cortex.tex
+++ b/hardware/cortex.tex
@@ -1,4 +1,4 @@
-\namedsection{ARM Cortex M0 Processor}{Pasat}
+\namedsection{ARM Cortex M0 Processor \label{sec:cortex}}{Pasat}
 
 \note{talk about limitations of the processor ie no hardware divide or floating point arithmetic}
 
